--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
+ <!DOCTYPE html>
+<html>
+<head>
+<title>CV</title>
+</head>
 
+<body>
+  <h1>Ilya Khokh</h1>
+  <h2>khokh-ilya@mail.ru</h2>
+</body>
+
+</html> 
